# gifteroids

./: .gitignore  Cargo.toml  LICENSE  build_web.sh  index.html
src/: collision.rs  debug_lines.rs  gifteroids.rs  main.rs  santa.rs  score.rs  spaceship.rs  ui.rs  web_request.rs
