[package]
name = "gifteroids"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO: Trim down to necessary feature for small webapplication
bevy = "0.9"
rand = "0.8.0"
bevy_prototype_debug_lines = { version = "0.9", optional = true }

# TODO: Optimize for size when doing web output

[features]
debug_lines = ["dep:bevy_prototype_debug_lines"]
